--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en-ca">
   <head>
 
-    <!-- Metadata -->
+    <!--Meta data-->
     <meta charset="utf-8">
     <meta name="description" content="Cop vs. Meatballs">
     <meta name="keywords" content="immaculata, ics2o">
     <meta name="author" content="Lily Carroll">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Favicon -->
+    <!--Code for favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="manifest" href="./favicon/site.webmanifest">
 
-    <!-- Title -->
+    <!--Title-->
     <title>Cop vs. Meatballs</title>
   </head>
   <body>
 
-    <!-- Links to Phaser 3 library and game.js -->
+    <!--Links to Phaser 3 library and game.js-->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
     <script type="module" src="js/game.js"></script>
   </body>
